fixes bug 114778 "formpost temp files not cleaned up when browser exits" r=gordon,dougt sr=mscott